--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 #chart_div{
   position: absolute;
-  top: 5%;
+  top: 12%;
   left: 45%;
   width:700px;
   height:500px;
@@ -18,6 +18,12 @@ ul{
 }
 #date,#month{
   margin-top: 3%; 
+}
+#title{
+  position: absolute;
+  top: 0%;
+  font-size: 30px;
+  left: 45%;
 }
 
 li:hover{
